# htmx

./: eval-nonce-brainstorm.md  eval-usage-analysis.md  hold-extension.js  i need to explain to a coding AI how the trusted T.md  idea.md  nonce-fix-analysis.md  nonce-strategy-options.md  package-lock.json  package.json  secure-eval.js  test-anchor.html  test-hx-redirect.html  test-replace-url.html  test-secure-eval.js  todo.html  trusted_types_scan_results.txt  trusted_types_scanner.py  tsconfig.json
dev/four/design/: ETAG_POLLING.md
docs/: htmx-eval.js  htmx-fix.js  htmx-test.js  htmx-trigger-load.js  htmx.js  idiomorph-ext-debug.js  index.html  secure-eval-demo.html  server-commands-test-mocked.html
docs/lcov-report/: htmx.js.html  index.html
docs/lcov-report-old/: htmx.js.html  index.html
htmx-wasm/: Cargo.toml  README.md  build.sh
htmx-wasm/src/: ajax.rs  config.rs  dom.rs  events.rs  lib.rs  swap.rs  triggers.rs
safeNonce/: reademe.md
scripts/: fix-types.js
src/: history-full.js  htmx.js  htmx2.0.7.js
src/ext/: hx-preload.js  secure-eval.js
test/: index.html
test/attributes/: hx-disabled-elt.js  hx-on-wildcard.js  hx-swap.js  hx-trigger.js
test/core/: api.js  events.js  headers.js  nonce.js
test/manual/: server.js
test/module/: README.md
test/module/esbuild/: build.js  package.json  verify.js
test/module/typescript/: package.json  tsconfig.json  verify.js
test/module/vite/: package.json  verify.js  vite.config.mjs
test/module/webpack/: package.json  (+1 more)
www/content/: QUIRKS.md  api.md  docs.md  events.md  reference.md
(+13 files in other folders)
